--- a/ncbi-blast-2.7.1+/bin/Null_Distribution_Histogram.Rmd
+++ b/ncbi-blast-2.7.1+/bin/Null_Distribution_Histogram.Rmd
@@ -23,7 +23,7 @@ Evalues <- read_tsv("output23.txt")
 ## Plot data
 
 ```{r}
-Evalueshist <- ggplot(data=Evalues, aes(Evalues$'0.99')) + geom_histogram()
+Evalueshist <- ggplot(data=Evalues, aes(Evalues[c(11)])) + geom_histogram()
 Evalueshist <- Evalueshist + labs(title="Null Distribution of E-values", x="E-value", y="Count")+ 
   geom_histogram(color="black", fill="white")
 Evalueshist
