--- a/ncbi-blast-2.7.1+/bin/Null_Distribution_Histogram.Rmd
+++ b/ncbi-blast-2.7.1+/bin/Null_Distribution_Histogram.Rmd
@@ -12,19 +12,64 @@ output: html_document
 ```{r}
 library(ggplot2)
 library(readr)
+library(dplyr)
+library(qqman)
 ```
 
 ## Parse data 
 
 ```{r}
-Evalues <- read_tsv("output23.txt")
+NullEvalues <- read_tsv("outputRand2.txt")
+Evalues <- read_tsv("outputCandida.txt")
 ```
 
 ## Plot data
 
 ```{r}
-Evalueshist <- ggplot(data=Evalues, aes(Evalues[c(11)])) + geom_histogram()
-Evalueshist <- Evalueshist + labs(title="Null Distribution of E-values", x="E-value", y="Count")+ 
-  geom_histogram(color="black", fill="white")
-Evalueshist
+#Give column names to the null and relative data frames
+colnames(Evalues) <- c("qseqid", "sseqid", "pident", "length", "mismatch", "gapopen","qstart", "qend", "sstart", "send", "evalue", "bitscore")
+colnames(NullEvalues) <- c("qseqid", "sseqid", "pident", "length", "mismatch", "gapopen","qstart", "qend", "sstart", "send", "evalue", "bitscore")
+
+#order the data frames from smallest to largest evalues
+Evalues <- arrange(Evalues, evalue)
+NullEvalues <- arrange(NullEvalues, evalue)
+
+# If we want equal number of points include these two lines
+Evalues <- head(Evalues, n=56000)
+NullEvalues <- head(NullEvalues, n=56000)
+
+
+cols <- c("null"="#f04546","relative"="#3591d1")
+ggplot() + 
+    geom_histogram(data=Evalues, aes(Evalues$evalue, fill="relative") , alpha = .3) +
+    geom_histogram(data=NullEvalues, aes(NullEvalues$evalue, fill="null"), alpha = .3) +
+    labs(title="Null Distribution and Alignment of Candida and Relative Sequences", x="E-value", y="Count")+
+    scale_colour_manual(values=cols) + scale_fill_manual(name="Alignments",values=cols)
 ```
+
+## Manhattan plots
+
+```{r}
+manhattanEval <- select(Evalues, qseqid, sseqid, evalue)
+manhattanEval <-manhattanEval[(manhattanEval[,3]<1),]
+targetGenes <- c()
+relativeGenes <- c()
+
+for(i in 1:length(manhattanEval$qseqid)){
+  targetGenes <- c(targetGenes, as.integer(substr(manhattanEval$qseqid[i], 8, 14)))
+  relativeGenes <- c(relativeGenes, as.integer(substr(manhattanEval$sseqid[i], 6, 10)))
+}
+manhattanEval$target <- targetGenes
+manhattanEval$relative <- relativeGenes
+manhattanEval
+manhattan(manhattanEval,main = "E-valules less than 1.0 for Relative Sequences", ylim = c(0, 120) ,chr = "relative", bp = "target", p = "evalue", col = c("lightcoral", "lightblue"), ylab = "-log10(evalue)", xlab= "Relative Sequences") 
+
+```
+
+
+
+
+
+
+
+
